<resources>
    <string name="app_name">Alamabra1925</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Alamabra1925</string>
    <string name="nav_header_subtitle">Nuevos paradigmas de interacción</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Map</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_ip">Interest Point Menu</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="todo">TODO</string>
    <string name="clear_database">Clear Database (Debug)</string>
    <string name="fill_database">Fill Database (Debug)</string>
    <string name="check_database">Check Database (Debug)</string>
    <string name="Content">Content</string>
    <string name="Title">Title</string>
    <string name="inside_maps">Inside maps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game">Game</string>
    <string name="game_explanation">You will be shown different questions about the Alhambra.\n
        Move your phone back and forth to answer "yes" nad from side to side to answer "no".\n
        You have only 5 seconds to answer so be fast!!\n\n

        Good luck and have fun!!
    </string>

</resources>
