<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/clear_database"
        android:orderInCategory="100"
        android:title="@string/clear_database"
        app:showAsAction="never" />
    <item
        android:id="@+id/fill_database"
        android:orderInCategory="100"
        android:title="@string/fill_database"
        app:showAsAction="never" />
    <item
        android:id="@+id/check_database"
        android:orderInCategory="100"
        android:title="@string/check_database"
        app:showAsAction="never" />
</menu>
