<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_mylocation"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_ipmenu"
            android:icon="@drawable/ic_menu_ipmenu"
            android:title="@string/menu_ip" />
        <item
            android:id="@+id/nav_inner_maps_list"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/inside_maps" />

        <item
            android:id="@+id/nav_game"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/game" />
    </group>

</menu>
