<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.aaalamabra1925.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.aaalamabra1925.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.aaalamabra1925.ui.ipmenu.InteresPointMenuFragment"
        android:label="@string/menu_ip"
        tools:layout="@layout/fragment_ipmenu"/>

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.aaalamabra1925.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.aaalamabra1925.ui.inside.InsideFragment"
        android:label="Inside Maps"
        tools:layout="@layout/fragment_inside" />
</navigation>